--- a/repo/service/trunk/search/binary/binary-search-webapp/pom.xml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/pom.xml
@@ -14,7 +14,7 @@
 
     <artifactId>binary-search-webapp</artifactId>
     <packaging>war</packaging>
-    <version>1.6.0-beta-5-SNAPSHOT</version>
+    <version>1.6.0-beta-6</version>
 
     <name>IntAct Services :: Search :: Binary :: Binary Search Webapp</name>
     <description>Interface for the PSIMITAB search</description>
