--- a/repo/sanity/trunk/pom.xml
+++ b/repo/sanity/trunk/pom.xml
@@ -20,7 +20,7 @@
 
     <properties>
         <currentVersion>${version}</currentVersion>
-        <core.version>1.7.0</core.version>
+        <core.version>1.7.2-SNAPSHOT</core.version>
     </properties>
 
     <scm>
