--- a/repo/maven-plugins/psimitab-indexer-maven-plugin/trunk/pom.xml
+++ b/repo/maven-plugins/psimitab-indexer-maven-plugin/trunk/pom.xml
@@ -13,11 +13,11 @@
     <packaging>maven-plugin</packaging>
     <version>1.6.0-SNAPSHOT</version>
 
-    <name>Plugin - psimitab-indexer-maven-plugin</name>
+    <name>Plugin - psimitab-indexer-maven-plugin</name> 
     <description>Plugin for IntAct</description>
     <url>http://www.ebi.ac.uk/~intact/devsite/maven-plugins/psimitab-indexer-maven-plugin</url>
 
-    <scm>
+    <scm> 
         <connection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven-plugins/psimitab-indexer-maven-plugin/trunk</connection>
         <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven-plugins/psimitab-indexer-maven-plugin/trunk</developerConnection>
         <url>http://svn.sourceforge.net/viewcvs.cgi/intact/repo/maven-plugins/psimitab-indexer-maven-plugin/trunk/</url>
@@ -25,9 +25,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>uk.ac.ebi.intact.util</groupId>
+            <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
             <artifactId>intact-psimitab</artifactId>
-            <version>1.1</version>
+            <version>2.0.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
