--- a/repo/sanity/trunk/intact-sanity-check/src/test/resources/log4j.properties
+++ b/repo/sanity/trunk/intact-sanity-check/src/test/resources/log4j.properties
@@ -1,6 +1,7 @@
 log4j.rootCategory=WARN, A
 
 log4j.category.uk.ac.ebi.intact.sanity=DEBUG
+log4j.category.uk.ac.ebi.intact.sanity.commons=DEBUG
 
 # intact-core
 log4j.category.uk.ac.ebi.intact=WARN
