--- a/repo/sanity/trunk/intact-sanity-rules/pom.xml
+++ b/repo/sanity/trunk/intact-sanity-rules/pom.xml
@@ -42,6 +42,12 @@
             <artifactId>commons-httpclient</artifactId>
             <version>3.1-rc1</version>
         </dependency>
+
+        <dependency>
+            <groupId>uk.ac.ebi.intact.core</groupId>
+            <artifactId>intact-persister</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <!-- EBI repositories -->
