--- a/repo/core/branches/intact-core-jpa/pom.xml
+++ b/repo/core/branches/intact-core-jpa/pom.xml
@@ -1,9 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
-         <groupId>uk.ac.ebi.intact.core</groupId>
-         <artifactId>core</artifactId>
-         <version>1.7.2-SNAPSHOT</version>
+        <groupId>uk.ac.ebi.intact.core</groupId>
+        <artifactId>core</artifactId>
+        <version>1.7.2-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
