--- a/repo/core/branches/intact-core-jpa/src/test/resources/log4j.properties
+++ b/repo/core/branches/intact-core-jpa/src/test/resources/log4j.properties
@@ -42,13 +42,13 @@ log4j.category.org.hibernate.tool.hbm2ddl=INFO
 #Log the state of all entities (max 20 entities) associated with the session at flush time
 log4j.category.org.hibernate.pretty=DEBUG
 #Log all second-level cache activity
-log4j.category.org.hibernate.cache=DEBUG
+log4j.category.org.hibernate.cache=INFO
 #Log transaction related activity
 log4j.category.org.hibernate.transaction=INFO
 #Log all JDBC resource acquisition
 log4j.category.org.hibernate.jdbc=INFO
 #Log HQL and SQL ASTs during query parsing
-log4j.category.org.hibernate.hql.ast.AST=DEBUG
+log4j.category.org.hibernate.hql.ast.AST=INFO
 #Log all JAAS authorization requests
 log4j.category.org.hibernate.secure=INFO
 
