--- a/repo/core/branches/intact-core-jpa/pom.xml
+++ b/repo/core/branches/intact-core-jpa/pom.xml
@@ -22,6 +22,12 @@
     </properties>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.myfaces.tobago</groupId>
