--- a/repo/core/branches/intact-core-jpa/src/test/resources/log4j.properties
+++ b/repo/core/branches/intact-core-jpa/src/test/resources/log4j.properties
@@ -5,7 +5,7 @@ log4j.category.uk.ac.ebi.intact=DEBUG
 log4j.category.uk.ac.ebi.intact.persistence=INFO
 log4j.category.uk.ac.ebi.intact.model=INFO
 log4j.category.uk.ac.ebi.intact.config=DEBUG
-log4j.category.uk.ac.ebi.intact.context=DEBUG
+log4j.category.uk.ac.ebi.intact.context=INFO
 log4j.category.uk.ac.ebi.intact.annotation=INFO
 
 # data-exchange
