Changed AST debug level

--- a/repo/site/trunk/intact-kickstart/src/main/resources/log4j.properties
+++ b/repo/site/trunk/intact-kickstart/src/main/resources/log4j.properties
@@ -48,7 +48,7 @@ log4j.category.org.hibernate.transaction=INFO
 #Log all JDBC resource acquisition
 log4j.category.org.hibernate.jdbc=INFO
 #Log HQL and SQL ASTs during query parsing
-log4j.category.org.hibernate.hql.ast.AST=DEBUG
+log4j.category.org.hibernate.hql.ast.AST=INFO
 #Log all JAAS authorization requests
 log4j.category.org.hibernate.secure=INFO
 
