--- a/repo/service/trunk/search/binary/binary-search-webapp/pom.xml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/pom.xml
@@ -220,13 +220,13 @@
         <dependency>
             <groupId>uk.ac.ebi.faces</groupId>
             <artifactId>ebifaces-core</artifactId>
-            <version>1.1</version>
+            <version>1.2.2</version>
         </dependency>
 
         <dependency>
-            <groupId>uk.ac.ebi.faces.ext</groupId>
+            <groupId>com.google.code.tomahawk</groupId>
             <artifactId>tomahawk-facelets</artifactId>
-            <version>1.0</version>
+            <version>1.1.6.1</version>
         </dependency>
 
         <dependency>
@@ -257,7 +257,7 @@
         <dependency>
             <groupId>com.sun.facelets</groupId>
             <artifactId>jsf-facelets</artifactId>
-            <version>1.1.13</version>
+            <version>1.1.14</version>
         </dependency>
 
         <dependency>
