--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/resources/uk/ac/ebi/intact/binarysearch/default-xref-links.properties
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/resources/uk/ac/ebi/intact/binarysearch/default-xref-links.properties
@@ -4,7 +4,7 @@
 #
 
 citexplore=http://www.ebi.ac.uk/citexplore/citationDetails.do?externalId={0}&dataSource=MED
-intact=http://www.ebi.ac.uk/intact/search/do/search?searchString={0}
+intact=http://www.ebi.ac.uk/intact/search/do/search?searchString={0}&filter=ac&searchClass=Interaction
 hierarchView=http://www.ebi.ac.uk/intact/hierarchView/display.jsp?AC={0}&depth=1&method=All
 ols=http://www.ebi.ac.uk/ontology-lookup/?termId={0}
 uniprotkb=http://www.ebi.uniprot.org/entry/{0}
