Added missing dep to intact-core

--- a/repo/service/trunk/search/legacy/search-engine/pom.xml
+++ b/repo/service/trunk/search/legacy/search-engine/pom.xml
@@ -19,8 +19,12 @@
 
     <dependencies>
         <dependency>
-                <groupId>commons-collections</groupId>
-                <artifactId>commons-collections</artifactId>
+            <groupId>uk.ac.ebi.intact.core</groupId>
+            <artifactId>intact-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.lucene</groupId>
