Fixed and using latest intact-core

--- a/repo/service/trunk/statistics/statistic-view/pom.xml
+++ b/repo/service/trunk/statistics/statistic-view/pom.xml
@@ -31,6 +31,10 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>uk.ac.ebi.intact.core</groupId>
+            <artifactId>intact-core</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>jfree</groupId>
