--- a/repo/service/trunk/predict/predict-app/pom.xml
+++ b/repo/service/trunk/predict/predict-app/pom.xml
@@ -32,6 +32,12 @@
     </properties>
 
     <dependencies>
+        <!-- IntAct dependencies -->
+        <dependency>
+		    <groupId>uk.ac.ebi.intact.core</groupId>
+		    <artifactId>intact-core</artifactId>
+		    <version>1.7.1</version>
+	    </dependency>
         <dependency>
             <groupId>uk.ac.ebi.intact.service.search.legacy</groupId>
             <artifactId>search-engine</artifactId>
@@ -50,7 +56,7 @@
         <dependency>
             <groupId>displaytag</groupId>
             <artifactId>displaytag</artifactId>
-            <version>1.0</version>
+            <version>1.0-unknown</version>
         </dependency>
 
         <!-- server -->
