--- a/repo/service/trunk/pom.xml
+++ b/repo/service/trunk/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>uk.ac.ebi.intact.maven</groupId>
         <artifactId>intact-hibernate-master</artifactId>
-        <version>18-SNAPSHOT</version>
+        <version>18</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -47,6 +47,9 @@
     </scm>
 
     <build>
+
+        <finalName>${artifactId}-${db.alias}-${version}-${buildNumber}</finalName>
+
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
