--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/log4j.properties
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/log4j.properties
@@ -1,13 +1,13 @@
-log4j.rootCategory=DEBUG, A
+log4j.rootCategory=WARN, A
 
 # intact-core
-log4j.category.uk.ac.ebi.intact=DEBUG
+log4j.category.uk.ac.ebi.intact=INFO
 log4j.category.uk.ac.ebi.intact.persistence.util=INFO
 log4j.category.uk.ac.ebi.intact.persistence.dao=INFO
 
 log4j.category.uk.ac.ebi.intact.model=INFO
 log4j.category.uk.ac.ebi.intact.config=INFO
-log4j.category.uk.ac.ebi.intact.context=DEBUG
+log4j.category.uk.ac.ebi.intact.context=INFO
 log4j.category.uk.ac.ebi.intact.annotation=INFO
 
 log4j.category.uk.ac.ebi.intact.core.persister=INFO
@@ -50,7 +50,7 @@ log4j.category.org.hibernate.transaction=INFO
 #Log all JDBC resource acquisition
 log4j.category.org.hibernate.jdbc=INFO
 #Log HQL and SQL ASTs during query parsing
-log4j.category.org.hibernate.hql.ast.AST=DEBUG
+log4j.category.org.hibernate.hql.ast.AST=INFO
 #Log all JAAS authorization requests
 log4j.category.org.hibernate.secure=INFO
 
