--- a/repo/service/trunk/pom.xml
+++ b/repo/service/trunk/pom.xml
@@ -80,7 +80,7 @@
                         </connector>
                     </connectors>
                     <scanIntervalSeconds>10</scanIntervalSeconds>
-                    <contextPath>intact/${build.finalName}</contextPath>
+                    <contextPath>intact/${build.artifactId}</contextPath>
                 </configuration>
             </plugin>
         </plugins>
