added intact- as a prefix of all WAR files generated under service

--- a/repo/service/trunk/pom.xml
+++ b/repo/service/trunk/pom.xml
@@ -48,7 +48,7 @@
 
     <build>
 
-        <finalName>${artifactId}-${db.alias}-${version}-${buildNumber}</finalName>
+        <finalName>intact-${artifactId}-${db.alias}-${version}-${buildNumber}</finalName>
 
         <plugins>
             <plugin>
