Javadoc plugin that generates UML

--- a/repo/maven/trunk/master-pom/pom.xml
+++ b/repo/maven/trunk/master-pom/pom.xml
@@ -131,6 +131,27 @@
                         </execution>
                     </executions>
                 </plugin>
+
+                <plugin>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <configuration>
+                        <source>1.5</source>
+                        <aggregate>true</aggregate>
+                        <doclet>gr.spinellis.umlgraph.doclet.UmlGraphDoc</doclet>
+                        <docletArtifact>
+                            <groupId>gr.spinellis</groupId>
+                            <artifactId>UmlGraph</artifactId>
+                            <version>4.6</version>
+                        </docletArtifact>
+                        <additionalparam>
+                            -inferrel -inferdep -quiet -hide java.*
+                            -collpackages java.util.* -qualify
+                            -postfixpackage -nodefontsize 9
+                            -nodefontpackagesize 7
+                        </additionalparam>
+                    </configuration>
+                </plugin>
+
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-idea-plugin</artifactId>
