--- a/repo/service/trunk/graph2mif/graph2mif-server/pom.xml
+++ b/repo/service/trunk/graph2mif/graph2mif-server/pom.xml
@@ -26,13 +26,7 @@
     <name>IntAct Services :: Graph2MIF :: Server</name>
     <description>Graph2MIF Web Service</description>
 
-    <properties>
-        <jetty.port>9090</jetty.port>
-    </properties>
-
     <build>
-        <finalName>${artifactId}-${db.alias}-${version}</finalName>
-
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -100,9 +94,13 @@
 
     <dependencies>
         <dependency>
-            <groupId>uk.ac.ebi.intact.util</groupId>
+            <groupId>uk.ac.ebi.intact.core</groupId>
+            <artifactId>intact-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.intact.dataexchange.psimi.legacy</groupId>
             <artifactId>data-conversion</artifactId>
-            <version>1.6.0-SNAPSHOT</version>
+            <version>2.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.intact.util</groupId>
