--- a/repo/service/trunk/graph2mif/graph2mif-server/src/main/resources/log4j.properties
+++ b/repo/service/trunk/graph2mif/graph2mif-server/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 
-log4j.rootCategory=INFO, A
+log4j.rootCategory=WARN, A
 
 log4j.category.uk.ac.ebi.intact=DEBUG
 log4j.category.uk.ac.ebi.intact.persistence.util=INFO
@@ -9,18 +9,16 @@ log4j.category.uk.ac.ebi.intact.model.IntactObjectEventListener=DEBUG
 
 log4j.category.org.apache=INFO
 
+
 log4j.category.org.hibernate=WARN
-
 log4j.category.org.hibernate.cfg=WARN
-
-log4j.category.org.hibernate.impl=INFO
+log4j.category.org.hibernate.impl=WARN
 log4j.category.org.hibernate.loader=WARN
-log4j.category.org.hibernate.util=INFO
-log4j.category.org.hibernate.persister=INFO
-log4j.category.org.hibernate.validator=INFO
-
-log4j.category.org.hibernate.engine=INFO
-log4j.category.org.hibernate.event=INFO
+log4j.category.org.hibernate.util=WARN
+log4j.category.org.hibernate.persister=WARN
+log4j.category.org.hibernate.validator=WARN
+log4j.category.org.hibernate.engine=WARN
+log4j.category.org.hibernate.event=WARN
 
 #Log all SQL DML statements as they are executed
 log4j.category.org.hibernate.SQL=INFO
@@ -29,18 +27,17 @@ log4j.category.org.hibernate.type=INFO
 #Log all SQL DDL statements as they are executed
 log4j.category.org.hibernate.tool.hbm2ddl=INFO
 #Log the state of all entities (max 20 entities) associated with the session at flush time
-log4j.category.org.hibernate.pretty=DEBUG
+log4j.category.org.hibernate.pretty=INFO
 #Log all second-level cache activity
-log4j.category.org.hibernate.cache=DEBUG
+log4j.category.org.hibernate.cache=INFO
 #Log transaction related activity
 log4j.category.org.hibernate.transaction=INFO
 #Log all JDBC resource acquisition
 log4j.category.org.hibernate.jdbc=INFO
 #Log HQL and SQL ASTs during query parsing
-log4j.category.org.hibernate.hql.ast.AST=DEBUG
+log4j.category.org.hibernate.hql.ast.AST=WARN
 #Log all JAAS authorization requests
 log4j.category.org.hibernate.secure=INFO
-
 log4j.category.com.mchange.v2=INFO
 
 # ***** A is set to be a ConsoleAppender.
