--- a/repo/current/plugins-miscel/pom.xml
+++ b/repo/current/plugins-miscel/pom.xml
@@ -11,14 +11,16 @@
     <parent>
         <groupId>uk.ac.ebi.intact.maven</groupId>
         <artifactId>intact-hibernate-master</artifactId>
-        <version>17</version>
+        <version>18</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>uk.ac.ebi.intact.plugins</groupId>
     <artifactId>plugins-miscel</artifactId>
     <packaging>pom</packaging>
     <version>1.6.0-SNAPSHOT</version>
+
     <name>IntAct Maven Plugins</name>
     <url>http://www.ebi.ac.uk/~baranda/intact/maven-plugins</url>
     <description>Intact maven plugins</description>
@@ -33,8 +35,9 @@
     <properties>
         <site.remote.basedir>scp://quanea2.ebi.ac.uk/ebi/sp/pro6/intact/local/doc/devsite</site.remote.basedir>
 
-        <core.version>1.7.1</core.version>
+        <core.version>1.7.2-SNAPSHOT</core.version>
         <bridges.version>2.0.1-SNAPSHOT</bridges.version>
+		<plugin.version>2.1-SNAPSHOT</plugin.version>
     </properties>
 
     <modules>
@@ -101,7 +104,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.plugins</groupId>
             <artifactId>intact-plugin</artifactId>
-            <version>2.0</version>
+            <version>${plugin.version}</version>
         </dependency>
 
         <dependency>
