Removed debugging logs

--- a/repo/service/trunk/graph2mif/graph2mif-server/src/main/resources/log4j.properties
+++ b/repo/service/trunk/graph2mif/graph2mif-server/src/main/resources/log4j.properties
@@ -1,14 +1,9 @@
 
 log4j.rootCategory=WARN, A
 
-log4j.category.uk.ac.ebi.intact=DEBUG
-log4j.category.uk.ac.ebi.intact.persistence.util=INFO
-log4j.category.uk.ac.ebi.intact.persistence.dao.IntactTransaction=INFO
-log4j.category.uk.ac.ebi.intact.model.IntactIdGenerator=INFO
-log4j.category.uk.ac.ebi.intact.model.IntactObjectEventListener=DEBUG
+log4j.category.uk.ac.ebi.intact=WARN
 
 log4j.category.org.apache=INFO
-
 
 log4j.category.org.hibernate=WARN
 log4j.category.org.hibernate.cfg=WARN
