--- a/repo/service/trunk/graph2mif/graph2mif-server/pom.xml
+++ b/repo/service/trunk/graph2mif/graph2mif-server/pom.xml
@@ -103,7 +103,7 @@
             <version>2.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>uk.ac.ebi.intact.util</groupId>
+            <groupId>uk.ac.ebi.intact.service.hierarchview</groupId>
             <artifactId>intact-graph</artifactId>
             <version>1.6.0-SNAPSHOT</version>
         </dependency>
