--- a/repo/site/trunk/intact-site/pom.xml
+++ b/repo/site/trunk/intact-site/pom.xml
@@ -44,6 +44,15 @@
                     </connectors>
                     <scanIntervalSeconds>10</scanIntervalSeconds>
                     <contextPath>intact/${build.finalName}</contextPath>
+
+                    <requestLog implementation="org.mortbay.jetty.NCSARequestLog">
+	                <filename>target/yyyy_mm_dd.request.log</filename>
+	                <retainDays>90</retainDays>
+		        <append>true</append>
+		        <extended>false</extended>
+        		<logTimeZone>GMT</logTimeZone>
+	            </requestLog>
+ 
                 </configuration>
             </plugin>
             <plugin>
@@ -134,7 +143,7 @@
         <dependency>
             <groupId>uk.ac.ebi.faces</groupId>
             <artifactId>ebifaces-core</artifactId>
-            <version>1.2.2</version>
+            <version>1.2.3</version>
         </dependency>
 
         <dependency>
