--- a/repo/service/trunk/search/binary/binary-search-webapp/pom.xml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/pom.xml
@@ -21,6 +21,7 @@
 
     <properties>
         <jetty.port>9191</jetty.port>
+        <jetty.context>binary-search</jetty.context>
     </properties>
 
     <build>
@@ -382,18 +383,18 @@
             <version>2.1</version>
         </dependency>
 
-        <dependency>
-            <groupId>hsqldb</groupId>
-            <artifactId>hsqldb</artifactId>
-            <version>1.8.0.7</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>hsqldb</groupId>-->
+            <!--<artifactId>hsqldb</artifactId>-->
+            <!--<version>1.8.0.7</version>-->
+        <!--</dependency>-->
 
         <!-- TopLink dependencies -->
-        <dependency>
-            <groupId>javax.persistence</groupId>
-            <artifactId>toplink-essentials</artifactId>
-            <version>1.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>javax.persistence</groupId>-->
+            <!--<artifactId>toplink-essentials</artifactId>-->
+            <!--<version>1.0</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>xerces</groupId>
