--- a/repo/site/trunk/intact-site/pom.xml
+++ b/repo/site/trunk/intact-site/pom.xml
@@ -27,6 +27,8 @@
     <description>The main web interface for intact</description>
 
     <properties>
+        <user>${env.USERNAME}</user>
+
         <jetty.port>9190</jetty.port>
         <jetty.context>site</jetty.context>
     </properties>
