--- a/repo/service/trunk/hierarch-view/intact-graph/pom.xml
+++ b/repo/service/trunk/hierarch-view/intact-graph/pom.xml
@@ -1,60 +1,98 @@
-<?xml version="1.0"?><project>
-  <parent>
-    <artifactId>hierarchview-master</artifactId>
-    <groupId>uk.ac.ebi.intact.service.hierarchview</groupId>
+<?xml version="1.0"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
+    <parent>
+        <artifactId>hierarchview-master</artifactId>
+        <groupId>uk.ac.ebi.intact.service.hierarchview</groupId>
+        <version>1.6.0-SNAPSHOT</version>
+    </parent>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>intact-graph</artifactId>
+    <name>IntAct Services :: HierarchView :: Graph</name>
     <version>1.6.0-SNAPSHOT</version>
-  </parent>
-  <modelVersion>4.0.0</modelVersion>
-  <artifactId>intact-graph</artifactId>
-  <name>IntAct Services :: HierarchView :: Graph</name>
-  <version>1.6.0-SNAPSHOT</version>
 
-  <dependencies>
-    <dependency>
-        <groupId>uk.ac.ebi.intact.core</groupId>
-        <artifactId>intact-core</artifactId>
-    </dependency>
+    <build>
+        <plugins>
+            <!-- Conversion of XML Schema into Java source code using JAXB-XJC -->
+            <plugin>
+                <groupId>com.sun.tools.xjc.maven2</groupId>
+                <artifactId>maven-jaxb-plugin</artifactId>
+                <version>1.0</version>
 
-    <dependency>
-      <groupId>psidev.psi.mi</groupId>
-      <artifactId>psimitab</artifactId>
-      <version>1.0-rc2-SNAPSHOT</version>
-    </dependency>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <generatePackage>uk.ac.ebi.intact.service.graph.jaxb</generatePackage>
+                    <includeSchemas>
+                        <includeSchema>META-INF/graphml-structure.xsd</includeSchema>
+                    </includeSchemas>
+                    <extension>true</extension>
+                    <strict>false</strict>
+                    <verbose>true</verbose>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
-    <dependency>
-    	<groupId>jung</groupId>
-    	<artifactId>jung</artifactId>
-   	 	<version>1.7.6</version>
-	</dependency>
-	<dependency>
-    	<groupId>jdom</groupId>
-   		<artifactId>jdom</artifactId>
-    	<version>b9</version>
-	</dependency>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>uk.ac.ebi.intact.core</groupId>
+            <artifactId>intact-core</artifactId>
+        </dependency>
 
-<!-- EBI repositories -->
- <repositories>
-  <repository>
-   <id>ebi-repo</id>
-   <name>The EBI internal repository</name>
-   <url>http://www.ebi.ac.uk/~maven/m2repo</url>
-   <releases>
-    <enabled>true</enabled>
-   </releases>
-   <snapshots>
-    <enabled>false</enabled>
-   </snapshots>
-  </repository>
-  <repository>
-   <id>ebi-repo-snapshots</id>
-   <name>The EBI internal repository</name>
-   <url>http://www.ebi.ac.uk/~maven/m2repo_snapshots</url>   <releases>
-    <enabled>false</enabled>
-   </releases>
-   <snapshots>
-    <enabled>true</enabled>
-   </snapshots>
-  </repository>
- </repositories>
+        <dependency>
+            <groupId>psidev.psi.mi</groupId>
+            <artifactId>psimitab</artifactId>
+            <version>1.5.0-SNAPSHOT</version>
+        </dependency>
+
+        <!-- Third party -->
+        <dependency>
+            <groupId>jung</groupId>
+            <artifactId>jung</artifactId>
+            <version>1.7.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.1</version>
+        </dependency>
+    </dependencies>
+
+    <!-- EBI repositories -->
+    <repositories>
+        <repository>
+            <id>ebi-repo</id>
+            <name>The EBI internal repository</name>
+            <url>http://www.ebi.ac.uk/~maven/m2repo</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>ebi-repo-snapshots</id>
+            <name>The EBI internal repository</name>
+            <url>http://www.ebi.ac.uk/~maven/m2repo_snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 </project>
