Using latest intact-core and tests pass

--- a/repo/data-exchange/trunk/ebeye/intact-ebi-search-engine-export/pom.xml
+++ b/repo/data-exchange/trunk/ebeye/intact-ebi-search-engine-export/pom.xml
@@ -27,6 +27,11 @@
 
         <dependency>
             <groupId>uk.ac.ebi.intact.core</groupId>
+            <artifactId>intact-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>uk.ac.ebi.intact.core</groupId>
             <artifactId>intact-persister</artifactId>
             <scope>test</scope>
         </dependency>
