--- a/repo/maven-plugins/ebeye-export-maven-plugin/trunk/pom.xml
+++ b/repo/maven-plugins/ebeye-export-maven-plugin/trunk/pom.xml
@@ -22,43 +22,18 @@
         <url>http://svn.sourceforge.net/viewcvs.cgi/intact/intact/repo/maven-plugins/ebeye-export-maven-plugin/trunk</url>
     </scm>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>uk.ac.ebi.intact.plugins</groupId>
-                <artifactId>dbtest-maven-plugin</artifactId>
-                <version>1.6.0-SNAPSHOT</version>
-
-                <configuration>
-                    <imports>
-                        <xmlFilesets>
-                            <xmlFileset>
-                                <version>1</version>
-                                <urls>
-                                    <url>ftp://ftp.ebi.ac.uk/pub/databases/intact/current/psi1/pmid/2007/10757791.xml
-                                    </url>
-                                </urls>
-                            </xmlFileset>
-                        </xmlFilesets>
-                    </imports>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
     <dependencies>
 
         <dependency>
-            <groupId>uk.ac.ebi.intact.templates</groupId>
-            <artifactId>h2db-with-cv</artifactId>
-            <type>zip</type>
-            <scope>test</scope>
+            <groupId>uk.ac.ebi.intact.dataexchange.ebeye</groupId>
+            <artifactId>intact-ebi-search-engine-export</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
-            <groupId>uk.ac.ebi.intact</groupId>
-            <artifactId>intact-ebi-search-engine-export</artifactId>
-            <version>1.3</version>
+            <groupId>uk.ac.ebi.intact.core</groupId>
+            <artifactId>intact-persister</artifactId>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
