--- a/repo/data-exchange/trunk/psimi/psixml/intact-psixml-exchange/src/test/resources/log4j.properties
+++ b/repo/data-exchange/trunk/psimi/psixml/intact-psixml-exchange/src/test/resources/log4j.properties
@@ -13,7 +13,7 @@ log4j.category.uk.ac.ebi.intact.annotation=INFO
 log4j.category.uk.ac.ebi.intact.core.persister=INFO
 
 # data exchange
-log4j.category.uk.ac.ebi.intact.dataexchange=INFO
+log4j.category.uk.ac.ebi.intact.dataexchange=DEBUG
 log4j.category.uk.ac.ebi.intact.dataexchange.enricher=INFO
 
 
@@ -21,7 +21,7 @@ log4j.category.uk.ac.ebi.intact.uniprot=INFO
 
 
 # related
-log4j.category.psidev.psi.mi=WARN
+log4j.category.psidev.psi.mi=ERROR
 
 # third-party from here
 log4j.category.uk.ac.ebi.ook=ERROR
@@ -60,7 +60,7 @@ log4j.category.org.hibernate.transaction=INFO
 #Log all JDBC resource acquisition
 log4j.category.org.hibernate.jdbc=INFO
 #Log HQL and SQL ASTs during query parsing
-log4j.category.org.hibernate.hql.ast.AST=DEBUG
+log4j.category.org.hibernate.hql.ast.AST=INFO
 #Log all JAAS authorization requests
 log4j.category.org.hibernate.secure=INFO
 
