IAC-62 (Broken link for sequence features in interaction details view)

--- a/repo/service/trunk/search/legacy/search-app/src/main/resources/log4j.properties
+++ b/repo/service/trunk/search/legacy/search-app/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootCategory=DEBUG, A
+log4j.rootCategory=WARN, A
 
 log4j.category.uk.ac.ebi.intact=INFO
 log4j.category.uk.ac.ebi.intact.persistence.util=INFO
@@ -45,7 +45,7 @@ log4j.category.org.hibernate.transaction=INFO
 #Log all JDBC resource acquisition
 log4j.category.org.hibernate.jdbc=INFO
 #Log HQL and SQL ASTs during query parsing
-log4j.category.org.hibernate.hql.ast.AST=DEBUG
+log4j.category.org.hibernate.hql.ast.AST=INFO
 #Log all JAAS authorization requests
 log4j.category.org.hibernate.secure=INFO
 
