--- a/repo/sanity/trunk/intact-sanity-check/src/test/resources/log4j.properties
+++ b/repo/sanity/trunk/intact-sanity-check/src/test/resources/log4j.properties
@@ -5,11 +5,11 @@ log4j.category.uk.ac.ebi.intact.sanity.commons=DEBUG
 
 # intact-core
 log4j.category.uk.ac.ebi.intact=WARN
-log4j.category.uk.ac.ebi.intact.persistence=INFO
-log4j.category.uk.ac.ebi.intact.model=INFO
-log4j.category.uk.ac.ebi.intact.config=DEBUG
-log4j.category.uk.ac.ebi.intact.context=DEBUG
-log4j.category.uk.ac.ebi.intact.annotation=INFO
+#log4j.category.uk.ac.ebi.intact.persistence=INFO
+#log4j.category.uk.ac.ebi.intact.model=INFO
+#log4j.category.uk.ac.ebi.intact.config=INFO
+#log4j.category.uk.ac.ebi.intact.context=INFO
+#log4j.category.uk.ac.ebi.intact.annotation=INFO
 
 # data-exchange
 
