--- a/repo/service/trunk/commons/confidence-score/pom.xml
+++ b/repo/service/trunk/commons/confidence-score/pom.xml
@@ -52,8 +52,15 @@
 		<dependency>
 			<groupId>uk.ac.ebi.intact.bridges</groupId>
 			<artifactId>intact-blast</artifactId>
-			<version>2.0-beta-6-SNAPSHOT</version>
+			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>uk.ac.ebi.intact.bridges</groupId>
+			<artifactId>intact-uniprot</artifactId>
+			<version>2.0.1-SNAPSHOT</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>psidev.psi.mi</groupId>
 			<artifactId>psimitab</artifactId>
@@ -79,31 +86,37 @@
 		</dependency>
 
 		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.3.1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>uk.ac.ebi.intact.service.search.binary</groupId>
 			<artifactId>wsclient</artifactId>
 			<version>1.6.0-beta-1</version>
 		</dependency>
 
 		<dependency>
-			<groupId>uk.ac.ebi.intact</groupId>
+			<groupId>uk.ac.ebi.intact.core</groupId>
 			<artifactId>intact-core</artifactId>
-			<version>1.6.2</version>
+			<version>1.7.1</version>
 		</dependency>
 
 		<!-- for xml parser -->
-<!-- 		<dependency>
+		<!-- 		<dependency>
 			<groupId>uk.ac.ebi.intact.confidence.blastmapping</groupId>
 			<artifactId>blast-mapping-parser</artifactId>
 			<version>1.0-SNAPSHOT</version>
-		</dependency>
--->
+			</dependency>
+		-->
 		<!-- for the blast h2 db -->
 		<!-- <dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<version>1.0.20070617</version>
-		</dependency>
--->
+			</dependency>
+		-->
 	</dependencies>
 
 
@@ -124,14 +137,14 @@
 			<id>ebi-repo-snapshots</id>
 			<name>The EBI internal repository</name>
 			<url>http://www.ebi.ac.uk/~maven/m2repo_snapshots</url>
+
 			<releases>
 				<enabled>false</enabled>
 			</releases>
 			<snapshots>
+				<updatePolicy>always</updatePolicy>
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
 	</repositories>
-
-
 </project>
