[IDE-68] Create a new maven project for intact-psimitab-converters

--- a/repo/data-exchange/trunk/psimi/psimitab/pom.xml
+++ b/repo/data-exchange/trunk/psimi/psimitab/pom.xml
@@ -1,6 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
         <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
@@ -25,7 +24,8 @@
     <modules>
         <module>intact-psimitab</module>
         <module>intact-interolog-prediction</module>
-    </modules>
+    <module>intact-psimitab-converters</module>
+  </modules>
 
     <dependencyManagement>
         <dependencies>
