Using latest intact-core

--- a/repo/site/trunk/intact-kickstart/src/main/resources/log4j.properties
+++ b/repo/site/trunk/intact-kickstart/src/main/resources/log4j.properties
@@ -53,7 +53,7 @@ log4j.category.org.hibernate.hql.ast.AST=INFO
 log4j.category.org.hibernate.secure=INFO
 
 #c3p0
-log4j.category.com.mchange.v2=WARN
+log4j.category.com.mchange.v2=DEBUG
 
 # ***** A is set to be a ConsoleAppender.
 log4j.appender.A=org.apache.log4j.ConsoleAppender
