set httpclient to WARN and hibernate AST to INFO

--- a/repo/service/trunk/editor/editor-app/src/main/resources/log4j.properties
+++ b/repo/service/trunk/editor/editor-app/src/main/resources/log4j.properties
@@ -10,6 +10,9 @@ log4j.category.uk.ac.ebi.intact.model.IntactIdGenerator=INFO
 log4j.category.uk.ac.ebi.intact.model.IntactObjectEventListener=INFO
 log4j.category.uk.ac.ebi.intact.config.impl.AbstractHibernateDataConfig=INFO
 
+# so the Wire class doesn't fill up the logs
+log4j.category.httpclient=WARN
+
 log4j.category.org.apache=INFO
 
 log4j.category.org.hibernate=ERROR
@@ -40,7 +43,7 @@ log4j.category.org.hibernate.transaction=INFO
 #Log all JDBC resource acquisition
 log4j.category.org.hibernate.jdbc=INFO
 #Log HQL and SQL ASTs during query parsing
-log4j.category.org.hibernate.hql.ast.AST=DEBUG
+log4j.category.org.hibernate.hql.ast.AST=INFO
 #Log all JAAS authorization requests
 log4j.category.org.hibernate.secure=INFO
 
