[IAV-4] Centralise getting data in DataService
These Classes now using the DataService

--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Search.properties
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Search.properties
@@ -6,3 +6,5 @@ search.url=/intact/search/do/hvWelcome
 search.parameter.query.name=searchString
 search.parameter.class.name=searchClass
 search.parameter.class.value=
+
+search.source.name=database
