Added tests for plugin

--- a/repo/maven-plugins/psixml-generator-maven-plugin/trunk/src/test/resources/log4j.properties
+++ b/repo/maven-plugins/psixml-generator-maven-plugin/trunk/src/test/resources/log4j.properties
@@ -8,6 +8,8 @@ log4j.category.uk.ac.ebi.intact.model.IntactIdGenerator=INFO
 log4j.category.uk.ac.ebi.intact.model.IntactObjectEventListener=DEBUG
 log4j.category.uk.ac.ebi.intact.config.impl.AbstractHibernateDataConfig=INFO
 
+log4j.category.uk.ac.ebi.intact.core.persister=INFO
+
 log4j.category.org.apache=INFO
 
 log4j.category.org.hibernate=ERROR
@@ -38,7 +40,7 @@ log4j.category.org.hibernate.transaction=INFO
 #Log all JDBC resource acquisition
 log4j.category.org.hibernate.jdbc=INFO
 #Log HQL and SQL ASTs during query parsing
-log4j.category.org.hibernate.hql.ast.AST=DEBUG
+log4j.category.org.hibernate.hql.ast.AST=INFO
 #Log all JAAS authorization requests
 log4j.category.org.hibernate.secure=INFO
 
