--- a/repo/service/trunk/search/binary/binary-webservice/ws/pom.xml
+++ b/repo/service/trunk/search/binary/binary-webservice/ws/pom.xml
@@ -10,7 +10,7 @@
 
     <artifactId>ws</artifactId>
     <packaging>war</packaging>
-    <version>1.6.0-beta-2</version>
+    <version>1.6.0-rc1-SNAPSHOT</version>
 
     <name>IntAct Services :: Search :: Binary :: Web Service :: Service</name>
     <description>A web service interface to retrieve data from intact</description>
@@ -75,9 +75,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>psidev.psi.mi</groupId>
-            <artifactId>psimitab-search</artifactId>
-            <version>1.2.2</version>
+            <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
+            <artifactId>intact-psimitab</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+            <!--<groupId>psidev.psi.mi</groupId>-->
+            <!--<artifactId>psimitab-search</artifactId>-->
+            <!--<version>1.2.2</version>-->
             <exclusions>
                 <exclusion>
                     <groupId>commons-logging</groupId>
