Made sure that by default logging is minimal in this application.

--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/log4j.properties
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/log4j.properties
@@ -1,16 +1,18 @@
 log4j.rootCategory=WARN, A
 
+log4j.category.uk.ac.ebi.intact.application.hierarchview=WARN
+
 # intact-core
-log4j.category.uk.ac.ebi.intact=INFO
-log4j.category.uk.ac.ebi.intact.persistence.util=INFO
-log4j.category.uk.ac.ebi.intact.persistence.dao=INFO
+log4j.category.uk.ac.ebi.intact=WARN
+log4j.category.uk.ac.ebi.intact.persistence.util=WARN
+log4j.category.uk.ac.ebi.intact.persistence.dao=WARN
 
-log4j.category.uk.ac.ebi.intact.model=INFO
-log4j.category.uk.ac.ebi.intact.config=INFO
-log4j.category.uk.ac.ebi.intact.context=INFO
-log4j.category.uk.ac.ebi.intact.annotation=INFO
+log4j.category.uk.ac.ebi.intact.model=WARN
+log4j.category.uk.ac.ebi.intact.config=WARN
+log4j.category.uk.ac.ebi.intact.context=WARN
+log4j.category.uk.ac.ebi.intact.annotation=WARN
 
-log4j.category.uk.ac.ebi.intact.core.persister=INFO
+log4j.category.uk.ac.ebi.intact.core.persister=WARN
 
 # related
 log4j.category.psidev.psi.mi=WARN
