Prepared for further dev

--- a/repo/service/trunk/search/binary/binary-webservice/wsclient/pom.xml
+++ b/repo/service/trunk/search/binary/binary-webservice/wsclient/pom.xml
@@ -26,6 +26,7 @@
     </properties>
 
     <build>
+        <finalName>intact-binary-wsclient-${version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
