IAE-121 (Persistence failure after move to intact-core 1.7.2-SNAPSHOT)

--- a/repo/service/trunk/editor/editor-app/src/main/resources/log4j.properties
+++ b/repo/service/trunk/editor/editor-app/src/main/resources/log4j.properties
@@ -3,12 +3,17 @@ log4j.rootCategory=DEBUG, A
 log4j.category.uk.ac.ebi.intact=INFO
 
 log4j.category.uk.ac.ebi.intact.application.editor=DEBUG
+log4j.category.uk.ac.ebi.intact.application.editor.security=INFO
 
+# core
 log4j.category.uk.ac.ebi.intact.persistence.util=INFO
 log4j.category.uk.ac.ebi.intact.persistence.dao.IntactTransaction=INFO
 log4j.category.uk.ac.ebi.intact.model.IntactIdGenerator=INFO
 log4j.category.uk.ac.ebi.intact.model.IntactObjectEventListener=INFO
 log4j.category.uk.ac.ebi.intact.config.impl.AbstractHibernateDataConfig=INFO
+log4j.category.uk.ac.ebi.intact.webapp=DEBUG
+
+# other
 
 # so the Wire class doesn't fill up the logs
 log4j.category.httpclient=WARN
@@ -39,7 +44,7 @@ log4j.category.org.hibernate.pretty=DEBUG
 #Log all second-level cache activity
 log4j.category.org.hibernate.cache=DEBUG
 #Log transaction related activity
-log4j.category.org.hibernate.transaction=INFO
+log4j.category.org.hibernate.transaction=DEBUG
 #Log all JDBC resource acquisition
 log4j.category.org.hibernate.jdbc=INFO
 #Log HQL and SQL ASTs during query parsing
