--- a/repo/service/trunk/editor/editor-app/src/main/webapp/WEB-INF/web.xml
+++ b/repo/service/trunk/editor/editor-app/src/main/webapp/WEB-INF/web.xml
@@ -160,10 +160,10 @@
         <welcome-file>welcome.jsp</welcome-file>
     </welcome-file-list>
 
-    <error-page>
-        <exception-type>javax.servlet.ServletException</exception-type>
-        <location>/pages/errorCommiting.jsp</location>
-    </error-page>
+    <!--<error-page>-->
+        <!--<exception-type>javax.servlet.ServletException</exception-type>-->
+        <!--<location>/pages/errorCommiting.jsp</location>-->
+    <!--</error-page>-->
 
     <!-- JSTL Tag Library Descriptor  -->
     <taglib>
