--- a/repo/service/trunk/editor/editor-app/src/test/resources/log4j.properties
+++ b/repo/service/trunk/editor/editor-app/src/test/resources/log4j.properties
@@ -1,9 +1,13 @@
 
 log4j.rootCategory=DEBUG, A
 
+#editor
+
+# core
 log4j.category.uk.ac.ebi.intact=DEBUG
 log4j.category.uk.ac.ebi.intact.persistence.util=INFO
 
+# other
 log4j.category.org.apache=INFO
 
 log4j.category.org.hibernate=WARN
@@ -34,7 +38,7 @@ log4j.category.org.hibernate.transaction=INFO
 #Log all JDBC resource acquisition
 log4j.category.org.hibernate.jdbc=INFO
 #Log HQL and SQL ASTs during query parsing
-log4j.category.org.hibernate.hql.ast.AST=DEBUG
+log4j.category.org.hibernate.hql.ast.AST=INFO
 #Log all JAAS authorization requests
 log4j.category.org.hibernate.secure=INFO
 
